[package]
name = "simulink-binder"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "Simulink C to Rust binder"
repository = "https://github.com/rconan/simulink-binder"
documentation = "https://docs.rs/simulink-binder"

[lib]
proc-macro = true

[dependencies]
license = "2.0.1"
paste = "1.0.5"
proc-macro2 = "1.0.28"
quote = "1.0.9"
regex = "1.5.4"
syn = "1.0.74"

